2010-03-25  Ojan Vafai  <ojan@chromium.org>

Reviewed by David Levin.

        mouse-based selections are always directional on Window/Linux
        https://bugs.webkit.org/show_bug.cgi?id=25195

        The tests are modified to expect different things for Win/Linux vs. Mac.

        * editing/selection/5195166-1.html:
        * editing/selection/extend-after-mouse-selection.html:
        * editing/selection/extend-selection-after-double-click-expected.txt:
        * editing/selection/extend-selection-after-double-click.html:
        * platform/chromium-linux/editing/selection/5195166-1-expected.checksum: Removed.
        * platform/chromium-linux/editing/selection/5195166-1-expected.png: Removed.
        * platform/chromium-win/editing/selection/5195166-1-expected.checksum: Removed.
        * platform/chromium-win/editing/selection/5195166-1-expected.png: Removed.
        * platform/chromium-win/editing/selection/5195166-1-expected.txt: Removed.
        * platform/mac/editing/selection/5195166-1-expected.checksum: Removed.
        * platform/mac/editing/selection/5195166-1-expected.png: Removed.
        * platform/mac/editing/selection/5195166-1-expected.txt:
        * platform/qt/editing/selection/5195166-1-expected.txt: Removed.
        * platform/win/editing/selection/extend-after-mouse-selection-expected.txt:
2010-03-25  Ojan Vafai  <ojan@chromium.org>

        Reviewed by David Levin.

        mouse-based selections are always directional on Windows/Linux
        https://bugs.webkit.org/show_bug.cgi?id=25195

        Change m_lastChangeWasHorizontalExtension to m_isDirectional
        and make m_isDirectional always be true for Windows/Linux.

        * editing/SelectionController.cpp:
        (WebCore::SelectionController::SelectionController):
        (WebCore::SelectionController::setSelection):
        (WebCore::SelectionController::setIsDirectional):
        (WebCore::SelectionController::willBeModified):
        When double-clicking, the base/extent will be in the middle
        of the selection instead of the start/end of it. Changed to
        maintain that modifications after double-click still move the
        start/end of the selection, not the base/extent.
        (WebCore::SelectionController::modify):
        * editing/SelectionController.h:
        * page/EventHandler.cpp:
        (WebCore::EventHandler::handleMousePressEventSingleClick):
        (WebCore::EventHandler::updateSelectionForMouseDrag):

Canonical link: https://commits.webkit.org/47861@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56567 268f45cc-cd09-0410-ab3c-d52691b4dbfc