WebCore/editing/SelectionController.h
@@ -97,7 +97,7 @@ public:
     IntRect absoluteCaretBounds();
     void setNeedsLayout(bool flag = true);
 
-    void setLastChangeWasHorizontalExtension(bool b) { m_lastChangeWasHorizontalExtension = b; }
+    void setIsDirectional(bool);
     void willBeModified(EAlteration, EDirection);
     
     bool isNone() const { return m_selection.isNone(); }
@@ -189,7 +189,7 @@ private:
     
     bool m_needsLayout; // true if m_caretRect and m_absCaretBounds need to be calculated
     bool m_absCaretBoundsDirty;
-    bool m_lastChangeWasHorizontalExtension;
+    bool m_isDirectional;
     bool m_isDragCaretController;
     bool m_isCaretBlinkingSuspended;
     bool m_focused;
